--- a/lib/src/components/base-knobs/base-knobs.css
+++ b/lib/src/components/base-knobs/base-knobs.css
@@ -2,7 +2,7 @@
   margin-top: 10px;
 }
 nav {
-  margin-top: 20px;
+  margin-top: 50px;
   display: flex;
 }
 nav[vertical] {
@@ -10,15 +10,16 @@ nav[vertical] {
   flex-direction: column;
 }
 button {
+  font-size: 1rem;
   outline: 0;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  padding-right: 10px;
+  margin-right: 15px;
+  padding: 0;
   border: none;
   cursor: pointer;
   background: transparent;
-  border-radius: 4px;
   color: var(--base-color-ui);
+  border-bottom: 1px solid transparent;
 }
 
 button:hover {
@@ -27,6 +28,7 @@ button:hover {
 
 button[active] {
   color: black;
+  border-bottom: 1px solid black;
 }
 
 table {
