--- a/lib/src/components/base-box/base-box.css
+++ b/lib/src/components/base-box/base-box.css
@@ -3,10 +3,37 @@
 
 :host {
   display: block;
+  width: 100%;
 }
 
 :host([inline]) {
   display: inline-block;
+  width: auto;
+}
+
+:host([clickable]) {
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+:host([clickable]:hover) {
+  transform: translateY(-2px);
+}
+
+:host([clickable]:active) {
+  transform: translateY(0);
+}
+
+@each $i in primary, secondary, success, danger {
+  :host([bg="$(i)"]) {
+    background-color: var(--base-color-$(i));
+  }
+}
+
+@each $i in primary, secondary, success, danger {
+  :host([border="$(i)"]) {
+    border: 1px solid var(--base-color-$(i));
+  }
 }
 
 @each $i in none, xs, sm, md, lg, xl {
