--- a/docs/src/styles/github-markdown.css
+++ b/docs/src/styles/github-markdown.css
@@ -53,6 +53,7 @@
 .markdown-body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  max-width: 100%;
   color: #2c2b57;
   line-height: 1.5;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
@@ -391,6 +392,7 @@
 }
 
 .markdown-body pre {
+  overflow: scroll;
   margin-bottom: 0;
   margin-top: 0;
 }
