--- a/lib/src/components/base-input/base-input.css
+++ b/lib/src/components/base-input/base-input.css
@@ -23,26 +23,26 @@
   box-shadow: var(--base-input-box-shadow);
   border-radius: var(--base-input-border-radius);
   height: var(--base-input-height);
-  border: 1px solid var(--base-color-ui-light);
+  border: 2px solid var(--base-color-ui-light);
 }
 
 :host [part="input"]:hover {
-  border: 1px solid var(--base-color-ui);
+  border-color: var(--base-color-ui);
 }
 
 :host([focused]) [part="input"] {
   --base-input-box-shadow: 0px 0px 0px 1px var(--base-color-focus);
-  border: 1px solid var(--base-color-focus);
+  border-color: var(--base-color-focus);
 }
 
 :host(:not([focused])[valid]) [part="input"] {
   --base-input-box-shadow: 0px 0px 0px 1px var(--base-color-success);
-  border: 1px solid var(--base-color-success);
+  border-color: var(--base-color-success);
 }
 
 :host(:not([focused])[invalid]) [part="input"] {
   --base-input-box-shadow: 0px 0px 0px 1px var(--base-color-danger);
-  border: 1px solid var(--base-color-danger);
+  border-color: var(--base-color-danger);
 }
 
 :host [part="input-field"] {
