--- a/lib/src/components/base-knobs/base-knobs.css
+++ b/lib/src/components/base-knobs/base-knobs.css
@@ -9,6 +9,7 @@ nav[vertical] {
   display: flex;
   flex-direction: column;
 }
+
 button {
   font-size: 1rem;
   outline: 0;
@@ -32,6 +33,7 @@ button[active] {
 }
 
 table {
+  border-collapse: collapse;
   max-width: 100%;
   margin-top: 15px;
   text-align: left;
@@ -40,13 +42,11 @@ table {
   overflow: auto;
   margin-top: 30px;
   border-radius: 10px;
-  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
-  border: 2px solid var(--base-color-secondary-light);
+  border: 2px solid var(--base-color-ui-lighter);
 }
 
 table thead tr {
-  background: var(--base-color-secondary-light);
-  border-bottom: 3px solid var(--base-color-secondary-light);
+  background: var(--base-color-ui-lighter);
 }
 
 table th {
@@ -64,13 +64,4 @@ table tr td:first-of-type {
 
 table tr td:last-of-type {
   min-width: 140px;
-}
-
-table tr {
-  background-color: #fff;
-  border-bottom: 1px solid var(--base-color-secondary-light);
-}
-
-table tr:nth-child(2n) {
-  background-color: #fafafafa;
 }
