add no options slot to select

--- a/lib/src/components/base-select/base-select.css
+++ b/lib/src/components/base-select/base-select.css
@@ -187,3 +187,11 @@ div[part="option-list"] {
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
+::slotted([slot="no-options"]) {
+  display: flex;
+  align-items: center;
+  height: var(--base-size-md);
+  padding: 0 var(--base-space-sm);
+  background: white;
+}
