--- a/lib/src/components/base-box/base-box.css
+++ b/lib/src/components/base-box/base-box.css
@@ -1,7 +1,5 @@
 :host {
-}
-
-:host {
+  overflow: hidden;
   vertical-align: top;
   display: block;
   width: 100%;
@@ -25,13 +23,17 @@
   transform: translateY(0);
 }
 
-@each $i in primary, secondary, success, danger {
+@each $i in primary, secondary, success, danger, ui-light, ui-lighter,
+  ui-lightest, ui-dark
+{
   :host([bg="$(i)"]) {
     background-color: var(--base-color-$(i));
   }
 }
 
-@each $i in primary, secondary, success, danger {
+@each $i in primary, secondary, success, danger, ui-light, ui-lighter,
+  ui-lightest, ui-dark
+{
   :host([border="$(i)"]) {
     border: 1px solid var(--base-color-$(i));
   }
