--- a/lib/src/components/base-text/base-text.css
+++ b/lib/src/components/base-text/base-text.css
@@ -3,76 +3,76 @@
 }
 
 :host([inline]),
-:host([inline]) > * {
+:host([inline]) > *:first-child {
   display: inline-block;
 }
 
 :host([full]),
-:host([full]) > * {
+:host([full]) > *:first-child {
   display: block;
   width: 100%;
 }
 
-:host([tag="h1"]) > *,
-:host([look="h1"]) > * {
+:host([tag="h1"]) > *:first-child,
+:host([look="h1"]) > *:first-child {
   font-size: var(--base-font-size-xl);
 }
 
-:host([tag="h2"]) > *,
-:host([look="h2"]) > * {
+:host([tag="h2"]) > *:first-child,
+:host([look="h2"]) > *:first-child {
   font-size: var(--base-font-size-lg);
 }
 
-:host([tag="h3"]) > *,
-:host([look="h3"]) > * {
+:host([tag="h3"]) > *:first-child,
+:host([look="h3"]) > *:first-child {
   font-size: var(--base-font-size-md);
 }
 
-:host([tag="h4"]) > *,
-:host([look="h4"]) > * {
+:host([tag="h4"]) > *:first-child,
+:host([look="h4"]) > *:first-child {
   font-size: var(--base-font-size-sm);
 }
 
-:host([tag="h5"]) > *,
-:host([look="h5"]) > * {
+:host([tag="h5"]) > *:first-child,
+:host([look="h5"]) > *:first-child {
   font-size: var(--base-font-size-xs);
 }
 
-:host([tag="h6"]) > *,
-:host([look="h6"]) > *,
-:host([tag="small"]) > *,
-:host([look="small"]) > * {
+:host([tag="h6"]) > *:first-child,
+:host([look="h6"]) > *:first-child,
+:host([tag="small"]) > *:first-child,
+:host([look="small"]) > *:first-child {
   font-size: var(--base-font-size-xs);
 }
 
-:host([look="h1"]) > *,
-:host([tag="h1"]) > *,
-:host([look="h2"]) > *,
-:host([tag="h2"]) > *,
-:host([look="h4"]) > *,
-:host([tag="h4"]) > *,
-:host([look="h5"]) > *,
-:host([tag="h5"]) > *,
-:host([look="h6"]) > *,
-:host([tag="h6"]) > * {
+:host([look="h1"]) > *:first-child,
+:host([tag="h1"]) > *:first-child,
+:host([look="h2"]) > *:first-child,
+:host([tag="h2"]) > *:first-child,
+:host([look="h4"]) > *:first-child,
+:host([tag="h4"]) > *:first-child,
+:host([look="h5"]) > *:first-child,
+:host([tag="h5"]) > *:first-child,
+:host([look="h6"]) > *:first-child,
+:host([tag="h6"]) > *:first-child {
   color: var(--base-color-font-dark);
 }
 
-:host([look="p"]) > *,
-:host([tag="p"]) > *,
-:host([look="small"]) > *,
-:host([tag="small"]) > * {
+:host([look="p"]) > *:first-child,
+:host([tag="p"]) > *:first-child,
+:host([look="small"]) > *:first-child,
+:host([tag="small"]) > *:first-child {
   color: var(--base-color-font);
 }
 
-:host([look="i"]) > *,
-:host([tag="i"]) > *,
-:host([look="lead"]) > * {
+:host([look="i"]) > *:first-child,
+:host([tag="i"]) > *:first-child,
+:host([look="lead"]) > *:first-child {
   color: var(--base-color-font-light);
 }
 
-:host([tag="h6"]) > *,
-:host([look="h6"]) > * {
+:host([tag="h6"]) > *:first-child,
+:host([look="h6"]) > *:first-child {
   text-transform: uppercase;
 }
 
@@ -131,7 +131,7 @@
   color: var(--base-color-font);
 }
 
-:host([look="lead"]) > * {
+:host([look="lead"]) > *:first-child {
   font-size: 1.4rem;
   line-height: 32px;
   font-weight: 300;
