--- a/lib/src/components/base-checkbox/base-checkbox.css
+++ b/lib/src/components/base-checkbox/base-checkbox.css
@@ -8,7 +8,7 @@
 }
 
 :host {
-  vertical-align: top;
+  vertical-align: middle;
   height: var(--base-checkbox-height);
   display: inline-flex;
   align-items: center;
