--- a/lib/src/components/base-radio/base-radio.css
+++ b/lib/src/components/base-radio/base-radio.css
@@ -3,7 +3,7 @@
 }
 
 :host {
-  vertical-align: top;
+  vertical-align: middle;
   cursor: pointer;
   display: inline-block;
   height: var(--base-radio-height);
