--- a/lib/src/components/base-select/base-select.css
+++ b/lib/src/components/base-select/base-select.css
@@ -20,7 +20,7 @@
 }
 
 :host {
-  vertical-align: top;
+  vertical-align: middle;
   display: inline-flex;
   flex-wrap: wrap;
   align-items: flex-start;
