--- a/docs/src/styles/github-markdown.css
+++ b/docs/src/styles/github-markdown.css
@@ -54,6 +54,7 @@
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   max-width: 100%;
+  width: 100%;
   color: #2c2b57;
   line-height: 1.5;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
