--- a/lib/src/components/base-select/base-optgroup.css
+++ b/lib/src/components/base-select/base-optgroup.css
@@ -1,15 +1,15 @@
 :host {
+  --base-optgroup-padding: 0 var(--base-space-sm);
   display: block;
 }
 
 :host [part="label"] {
   display: flex;
-  padding-left: var(--base-space-sm);
+  padding: var(--base-optgroup-padding);
   height: var(--base-size-sm);
   align-items: center;
   font-weight: 400;
   color: var(--base-color-font);
-  padding: var(--base-space-xs);
   text-transform: uppercase;
   font-size: var(--base-font-size-xs);
 }
